Entrega final: TIENDA ONLINE

--- a/admin.html
+++ b/admin.html
@@ -49,7 +49,21 @@
             </div>
         </header>
 
-        <!-- Section-->
+        <hr>
+
+        <!-- Buscador -->
+        <div class="container">
+            <div class="input-group">
+                <input class="form-control border-end-0 border rounded-pill" type="text" value="Buscar... (Palabras claves: Producto / Servicio" id="buscador">
+                <span class="input-group-append">
+                    <button class="btn btn-outline-secondary bg-white border-start-0 border rounded-pill ms-n3" type="button" id="btnbuscador">
+                        Buscar
+                    </button>
+                </span>
+         </div>
+        </div>
+
+        <!-- Section PRODUCTOS-->
         <section class="py-5">
             <div class="container px-4 px-lg-5 mt-5">
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center" id="cont-productos">
@@ -57,6 +71,17 @@
                 </div>
             </div>
         </section>
+
+
+        <!-- Section BUSQUEDA -->
+        <!-- <section class="py-5">
+            <div class="container px-4 px-lg-5 mt-5">
+                <h5>Tu busqueda...</h5>
+                <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center" id="cont-busqueda">
+                    
+                </div>
+            </div>
+        </section> -->
 
         <!-- Footer-->
         <footer class="py-5 bg-dark">
