--- a/index.html
+++ b/index.html
@@ -21,20 +21,7 @@
                 <a class="navbar-brand" href="#!">TIENDA ONLINE</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <button type="button" class="btn btn-danger" id="btnlogout">
-                            Cerrar Sesion
-                        </button>                 
-                    </ul>
-                    <form class="d-flex">
 
-                        <button class="btn btn-outline-dark" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                            <i class="bi-cart-fill me-1"></i>
-                            Carrito
-                            <span class="badge bg-dark text-white ms-1 rounded-pill" id="contador-carrito">0</span>
-                        </button>                     
-
-                    </form>
                 </div>
             </div>
         </nav>
@@ -60,6 +47,13 @@
                       </div>
                       <button type="button" class="btn btn-success" id="btnLogin">Conectar</button>
                 </form>
+                <hr>
+                <h5>Usuarios disponibles: RANGO ADMIN</h5>
+                <p>USUARIO: admin</p>
+                <p>CONTRASEÑA: 123</p>
+                <h5>Usuarios disponibles: RANGO CLIENTE</h5>
+                <p>USUARIO: cliente</p>
+                <p>CONTRASEÑA: 123</p>
             </div>
         </section>
 
